--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "gulp": "^4.0.2",
     "webpack": "^5.74.0",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.6.1",
+    "slick-carousel": "^1.8.1"
   }
 }
